Connection and creation of frontend for a shared screen game (#17)
**Updates:**
FRONTEND
* Token selection for two players
* Font and formatting
* updated the app state to be in the App rather than in the Index
* added Enum case switch to render components and refactored rendering calls to functions
* updated functionality so that two tokens must be selected before the api for make settings can get called
* updated refactoring so that only the board container calls make move and get board
* updated tests

BACKEND
* added player token and turn tracking
* updated board response to include next turn
* updated files with Enum update and typing update
* updated tests
