# backend/tic_tac_toe_api/models.py
@@ -7,6 +7,8 @@ from .game import Player
 
 class BoardResponse(BaseModel):
     slots: List[str]
+    next_turn: Player
+    next_turn_token: str
 
 
 class MoveRequest(BaseModel):
